fix text alignment in tutorials

--- a/_sass/tutorial/tutorial-main.scss
+++ b/_sass/tutorial/tutorial-main.scss
@@ -184,6 +184,7 @@
     font-size: 0.8rem;
     font-weight: var(--font-medium);
     text-transform: uppercase;
+    text-align: center;
 }
 
 .step__content {
